--- a/style/page.css
+++ b/style/page.css
@@ -25,15 +25,30 @@ project_card {
     padding: 1em;
     width: 20em;
 
-    background: rgb(0, 0, 0, 0.7);
+    background: rgb(21, 20, 20);
 
-    backdrop-filter: blur(5em);
-    filter: drop-shadow(0 0 0.5em black);
+    /* background: rgb(0, 0, 0, 0.7); */
+    /* backdrop-filter: blur(5em); */
 
-    border-radius: 0.8em;
+    filter: drop-shadow(-0.2em 0.2em 0.2em rgba(0, 0, 0, 0.3))
+            drop-shadow(0.2em 0.2em 0.2em rgba(0, 0, 0, 0.3))
+            drop-shadow(0.2em -0.2em 0.2em rgba(0, 0, 0, 0.3))
+            drop-shadow(-0.2em -0.2em 0.2em rgba(108, 63, 255, 1));
+
+    border-radius: 1em;
+}
+
+project_card.about_me {
+    width: 35em;
 }
 
 project_card.minor {
     margin: 0.5rem;
     width: 40em;
+}
+
+img.centered {
+    display: block;
+    margin: auto;
+    left: 50%;
 }
