Add grass commission

--- a/style/page.css
+++ b/style/page.css
@@ -25,10 +25,12 @@ project_card {
     padding: 1em;
     width: 20em;
 
-    background: rgb(21, 20, 20);
+    /* background: rgb(21, 20, 20); */
 
-    /* background: rgb(0, 0, 0, 0.7); */
-    /* backdrop-filter: blur(5em); */
+    background: rgb(0, 0, 0, 0.8);
+    background: rgba(7, 7, 7, 0.8);
+
+    backdrop-filter: blur(5em);
 
     filter: drop-shadow(-0.2em 0.2em 0.2em rgba(0, 0, 0, 0.3))
             drop-shadow(0.2em 0.2em 0.2em rgba(0, 0, 0, 0.3))
@@ -47,8 +49,18 @@ project_card.minor {
     width: 40em;
 }
 
+project_card.video_card {
+    width: auto;
+    height: auto;
+    padding: 0.5em;
+}
+
 img.centered {
     display: block;
     margin: auto;
     left: 50%;
+}
+
+video.rounded {
+    border-radius: 1em;
 }
