--- a/style/page.css
+++ b/style/page.css
@@ -41,7 +41,11 @@ project_card {
 }
 
 project_card.about_me {
-    width: 35em;
+    width: 37.5em;
+}
+
+project_card.social {
+    width: 17.5em;
 }
 
 project_card.minor {
@@ -61,6 +65,6 @@ img.centered {
     left: 50%;
 }
 
-video.rounded {
+.rounded {
     border-radius: 1em;
 }
