--- a/style/text.css
+++ b/style/text.css
@@ -11,6 +11,14 @@ html {
     color: white;
 }
 
+.no-top {
+    margin-top: 0px;
+}
+
+.no-bottom {
+    margin-bottom: 0px;
+}
+
 .no-filter {
     backdrop-filter: none;
     filter: none;
