--- a/style/page.css
+++ b/style/page.css
@@ -1,5 +1,7 @@
 html {
-    background: rgb(75, 41, 175);
+    /* background: rgb(75, 41, 175); */
+
+    background: rgb(21, 19, 19);
 
     /* TODO: Find a bug fix for WebKit gradients */
     /* background: linear-gradient(180deg, rgba(45,29,98,1) 0%, rgba(108,63,255,1) 100%); */
@@ -8,16 +10,14 @@ html {
     background-attachment: scroll;
 }
 
-split {
-    display: block;
-    width: 100%;
-    background-color: rgb(55, 29, 128);
-    text-align: center;
-    color: #ffffff;
-    height: 2px;
-    border-radius: 5em;
+hr {
+    background: #545454;
+    height: 0.2em;
+    border: none;
+    border-radius: 0em;
 }
 
+/* Organization */
 div.flex_grid {
     flex-direction: column;
 }
@@ -28,6 +28,7 @@ div.flex_row {
     justify-content: center;
 }
 
+/* Cards */
 project_card {
     display: inline-block;
     margin: 1rem;
@@ -37,16 +38,10 @@ project_card {
     /* background: rgb(21, 20, 20); */
 
     /* background: rgb(0, 0, 0, 0.8); */
-    background: rgb(21, 14, 41);
+    /* background: rgb(21, 14, 41); */
+    background: rgb(79, 50, 176);
 
     /* backdrop-filter: blur(5em); */
-
-    /* This filter makes it appear elevated */
-    filter: drop-shadow(-0.2em 0.2em 0.2em rgba(0, 0, 0, 0.35))
-            drop-shadow(0.2em 0.2em 0.2em rgba(0, 0, 0, 0.35))
-            drop-shadow(0.2em -0.2em 0.2em rgba(0, 0, 0, 0.35))
-            drop-shadow(-0.2em -0.2em 0.2em rgba(108, 63, 255, 1));
-
     /* This filter makes it appear sunken in */
     /*
     filter: drop-shadow(0.2em -0.2em 0.2em rgba(0, 0, 0, 0.35))
@@ -55,7 +50,12 @@ project_card {
             drop-shadow(0.2em 0.2em 0.2em rgba(108, 63, 255, 1));
     */
 
-    border-radius: 1em;
+    filter: drop-shadow(-0.2em 0.2em 0.2em rgba(0, 0, 0, 0.25))
+        drop-shadow(0.2em 0.2em 0.2em rgba(0, 0, 0, 0.25))
+        drop-shadow(0.2em -0.2em 0.2em rgba(0, 0, 0, 0.25))
+        drop-shadow(-0.2em -0.2em 0.2em rgb(81, 50, 182));
+
+    border-radius: 0.8em;
 }
 
 project_card.auto_width {
@@ -81,12 +81,83 @@ project_card.video_card {
     padding: 0.5em;
 }
 
-img.centered {
+project_card.fill_page {
+    width: 100%;
+    height: 100%;
+}
+
+/* Cards */
+section_card {
+    display: inline-block;
+    margin: 1rem;
+    padding: 1em;
+    width: 20em;
+
+    /* background: rgb(21, 20, 20); */
+
+    /* background: rgb(0, 0, 0, 0.8); */
+    /* background: rgb(21, 14, 41); */
+    background: rgb(35, 28, 65);
+
+    /* backdrop-filter: blur(5em); */
+
+    filter: drop-shadow(-0.2em 0.2em 0.2em rgba(0, 0, 0, 0.15))
+    drop-shadow(0.2em 0.2em 0.2em rgba(0, 0, 0, 0.15))
+    drop-shadow(0.2em -0.2em 0.2em rgba(0, 0, 0, 0.15))
+    drop-shadow(-0.2em -0.2em 0.2em rgb(33, 25, 82));
+
+    border-radius: 0.8em;
+}
+
+section_card.auto_width {
+    width: auto;
+}
+
+page_card {
+    position: absolute;
+
+    width: auto;
+
+    /* background: rgb(21, 20, 20); */
+
+    /* background: rgb(0, 0, 0, 0.8); */
+    /* background: rgb(21, 14, 41); */
+    background: rgb(35, 28, 65);
+
+    /* backdrop-filter: blur(5em); */
+
+    filter: blur(0em, 0em, 0.2em, rgba(0, 0, 0, 0.35));
+
+    /* This filter makes it appear sunken in */
+    /*
+    filter: drop-shadow(0.2em -0.2em 0.2em rgba(0, 0, 0, 0.35))
+            drop-shadow(-0.2em -0.2em 0.2em rgba(0, 0, 0, 0.35))
+            drop-shadow(-0.2em 0.2em 0.2em rgba(0, 0, 0, 0.35))
+            drop-shadow(0.2em 0.2em 0.2em rgba(108, 63, 255, 1));
+    */
+
+    border-radius: 0.8em;
+}
+
+/* Misc */
+.center_block {
     display: block;
     margin: auto;
     left: 50%;
 }
 
 .rounded {
+    border-radius: 1em;
+}
+
+canvas.mandlebrot {
+    background: rgb(21, 14, 41);
+    padding: 10px;
+
+    filter: drop-shadow(-0.2em 0.2em 0.2em rgba(0, 0, 0, 0.35))
+            drop-shadow(0.2em 0.2em 0.2em rgba(0, 0, 0, 0.35))
+            drop-shadow(0.2em -0.2em 0.2em rgba(0, 0, 0, 0.35))
+            drop-shadow(-0.2em -0.2em 0.2em rgba(108, 63, 255, 1));
+
     border-radius: 1em;
 }
